[package]
name = "monoio-netreq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monoio = "0.2.4"
monoio-transports = "0.5.3"
monoio-http = "0.3.11"
hyper = { version = "1.5.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
http = "1.1.0"
thiserror = "2.0.3"
serde = "1.0.215"
serde_json = "1.0.132"
bytes = "1.8.0"
smol_str = "0.3.2"


[dev-dependencies]
anyhow = "1.0.92"


[features]
default = []
native-tls = ["monoio-transports/native-tls"]
hyper = ["monoio-transports/hyper", "dep:hyper", "dep:http-body-util"]