[package]
name = "monoio-netreq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
monoio = { version = "0.2.4", default-features = false }
monoio-http = { version = "0.3.11", optional = true }
hyper = { version = "1.5.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
http = "1.1.0"
thiserror = "2.0.3"
serde = "1.0.215"
serde_json = "1.0.132"
bytes = "1.8.0"
smol_str = "0.3.2"
service-async = "0.2.4"

[dependencies.monoio-transports]
git = "https://github.com/rEflxzR/monoio-transports.git"
branch = "main"
optional = true
default-features = false

[dev-dependencies]
anyhow = "1.0.92"

[features]
# There are three main features -> default-crate (enabled by default), pool, hyper-tls
# use default-crate feature if you want to use the default monoio-transports package
    # The package is re-exported from crates.io source
# use the pool if you want to use the git patch source
    # it allows you to create HttpConnector with your own pool parameters
# use the hyper-tls feature if you specifically want to use hyper connectors with tls support
    # Don't mix HttpConnector when you enable this feature
# The three features are not compatible with each other, build script prevents incompatible combinations
default = ["default-crate"]
default-crate = ["monoio-transports/default", "monoio-http"]
native-tls = ["default-crate", "monoio-transports/crate-native-tls"]
hyper = [
    "default-crate",
    "monoio-transports/crate-hyper",
    "dep:hyper",
    "dep:http-body-util"
]

pool = ["monoio-transports/monoio-default", "monoio-http"]
pool-native-tls = ["pool", "monoio-transports/native-tls"]
pool-hyper = [
    "pool",
    "monoio-transports/hyper",
    "dep:hyper",
    "dep:http-body-util"
]

hyper-tls = [
    "monoio-transports/monoio-legacy",
    "dep:hyper",
    "dep:http-body-util"
]
hyper-native-tls = [
    "hyper-tls",
    "monoio-transports/hyper-native-tls"
]